Ready for peer review

--- a/lab3/q-learning.ipynb
+++ b/lab3/q-learning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 473,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 478,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 479,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 480,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 481,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 482,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 483,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 484,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 485,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 486,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 487,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,10 +334,10 @@
     "\n",
     "      if not current_state: #if the game is finished\n",
     "        self.q[(self.previous_state, self.previous_move)] += \\\n",
-    "                self.learning_rate * (self.PENALTY - self.q[(self.previous_state, self.previous_move)]) #TODO - check this formula\n",
+    "                self.learning_rate * (self.PENALTY - self.q[(self.previous_state, self.previous_move)])\n",
     "        current_move = self.previous_state = self.previous_move = None #clear in order to prepare for the next game\n",
     "\n",
-    "      else: #if the game is not finished - TODO: review this last part - understand it well\n",
+    "      else: #if the game is not finished \n",
     "        self.add_state_moves(current_state) #adds the new state, moves\n",
     "        current_move = self.policy(current_state) #gets the move that we want to use\n",
     "\n",
@@ -355,7 +355,7 @@
     "          \n",
     "          self.q[(self.previous_state, self.previous_move)] += \\\n",
     "                    self.learning_rate * (reward + (self.discount_rate * maxQ) - \\\n",
-    "                    self.q[(self.previous_state, self.previous_move)]) # TODO - check this formula\n",
+    "                    self.q[(self.previous_state, self.previous_move)]) \n",
     "      \n",
     "\n",
     "        self.previous_state, self.previous_move = current_state.rows, current_move\n",
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 488,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,18 +448,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 490,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NUM_GAMES 150\n",
-      "NUM_GAMES 450\n",
-      "NUM_GAMES 1350\n",
-      "NUM_GAMES 4050\n",
-      "NUM_GAMES 12150\n"
+      "NUM_GAMES 600\n",
+      "NUM_GAMES 1800\n",
+      "NUM_GAMES 5400\n",
+      "NUM_GAMES 16200\n",
+      "NUM_GAMES 48600\n"
      ]
     }
    ],
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 491,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 492,
    "metadata": {},
    "outputs": [
     {
@@ -506,22 +506,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "q_learner lost\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner lost\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner lost\n",
       "q_learner won\n",
       "q_learner won\n",
       "q_learner won\n",
@@ -532,25 +523,6 @@
       "q_learner won\n",
       "q_learner won\n",
       "q_learner lost\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner lost\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner lost\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner lost\n",
-      "q_learner won\n",
       "q_learner lost\n",
       "q_learner won\n",
       "q_learner won\n",
@@ -562,19 +534,23 @@
       "q_learner won\n",
       "q_learner won\n",
       "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
       "q_learner lost\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner lost\n",
-      "q_learner won\n",
-      "q_learner won\n",
       "q_learner won\n",
       "q_learner won\n",
       "q_learner won\n",
@@ -593,13 +569,10 @@
       "q_learner won\n",
       "q_learner won\n",
       "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
       "q_learner lost\n",
-      "q_learner won\n",
-      "q_learner lost\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
-      "q_learner won\n",
       "q_learner won\n",
       "q_learner won\n",
       "q_learner won\n",
@@ -607,6 +580,33 @@
       "q_learner won\n",
       "q_learner won\n",
       "q_learner lost\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner lost\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner lost\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner lost\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner won\n",
+      "q_learner lost\n",
+      "q_learner won\n",
       "q_learner won\n",
       "q_learner won\n",
       "q_learner won\n",
