--- a/lab3/min_max.ipynb
+++ b/lab3/min_max.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,12 +227,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def best_move_pruning(state_as_list: list, player: int) -> tuple:\n",
     "    \"\"\" \"\"\"\n",
+    "    logging.debug(f\"best_move_pruning, player = {player}\")\n",
     "    if player == 0: # maximizing\n",
     "        return max(\n",
     "            (minimax_pruning(new_state, is_maximizing=False), new_state)\n",
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -350,6 +351,62 @@
     "#sc = best_move_pruning(state, player)\n",
     "#print(f\"sc {sc}\")\n",
     "#\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:root:status: Initial board  -> <1 3 5 7>\n",
+      "DEBUG:root:State as a list: [1, 3, 5, 7]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [50], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m     winner \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m \u001b[39m-\u001b[39m player\n\u001b[0;32m     14\u001b[0m     logging\u001b[39m.\u001b[39minfo(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mstatus: Player \u001b[39m\u001b[39m{\u001b[39;00mwinner\u001b[39m}\u001b[39;00m\u001b[39m won!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 16\u001b[0m play_nim(min_max_agent, min_max_agent)\n",
+      "Cell \u001b[1;32mIn [50], line 9\u001b[0m, in \u001b[0;36mplay_nim\u001b[1;34m(agent1, opponent)\u001b[0m\n\u001b[0;32m      6\u001b[0m player \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m      8\u001b[0m \u001b[39mwhile\u001b[39;00m nim:\n\u001b[1;32m----> 9\u001b[0m     ply \u001b[39m=\u001b[39m strategy[player](nim)\n\u001b[0;32m     10\u001b[0m     nim\u001b[39m.\u001b[39mnimming(ply)\n\u001b[0;32m     11\u001b[0m     logging\u001b[39m.\u001b[39mdebug(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mstatus: After player \u001b[39m\u001b[39m{\u001b[39;00mplayer\u001b[39m}\u001b[39;00m\u001b[39m -> \u001b[39m\u001b[39m{\u001b[39;00mnim\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn [48], line 10\u001b[0m, in \u001b[0;36mmin_max_agent\u001b[1;34m(state)\u001b[0m\n\u001b[0;32m      6\u001b[0m     state_as_list\u001b[39m.\u001b[39mappend(state\u001b[39m.\u001b[39mrows[i])\n\u001b[0;32m      8\u001b[0m logging\u001b[39m.\u001b[39mdebug(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mState as a list: \u001b[39m\u001b[39m{\u001b[39;00mstate_as_list\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m best_move \u001b[39m=\u001b[39m best_move_pruning(state_as_list, player\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m)\n\u001b[0;32m     13\u001b[0m move \u001b[39m=\u001b[39m best_move[\u001b[39m1\u001b[39m] \u001b[39m# since best_move = (score, [new state])\u001b[39;00m\n\u001b[0;32m     14\u001b[0m logging\u001b[39m.\u001b[39mdebug(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mMOVE: \u001b[39m\u001b[39m{\u001b[39;00mmove\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn [45], line 4\u001b[0m, in \u001b[0;36mbest_move_pruning\u001b[1;34m(state_as_list, player)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39m\"\"\" \"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mif\u001b[39;00m player \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m: \u001b[39m# maximizing\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mmax\u001b[39;49m(\n\u001b[0;32m      5\u001b[0m         (minimax_pruning(new_state, is_maximizing\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m), new_state)\n\u001b[0;32m      6\u001b[0m         \u001b[39mfor\u001b[39;49;00m new_state \u001b[39min\u001b[39;49;00m all_possible_new_states(state_as_list)\n\u001b[0;32m      7\u001b[0m     )\n\u001b[0;32m      8\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m      9\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mmin\u001b[39m(\n\u001b[0;32m     10\u001b[0m         (minimax_pruning(new_state, is_maximizing\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m), new_state)\n\u001b[0;32m     11\u001b[0m         \u001b[39mfor\u001b[39;00m new_state \u001b[39min\u001b[39;00m all_possible_new_states(state_as_list)\n\u001b[0;32m     12\u001b[0m     )\n",
+      "Cell \u001b[1;32mIn [45], line 5\u001b[0m, in \u001b[0;36m<genexpr>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39m\"\"\" \"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mif\u001b[39;00m player \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m: \u001b[39m# maximizing\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mmax\u001b[39m(\n\u001b[1;32m----> 5\u001b[0m         (minimax_pruning(new_state, is_maximizing\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m), new_state)\n\u001b[0;32m      6\u001b[0m         \u001b[39mfor\u001b[39;00m new_state \u001b[39min\u001b[39;00m all_possible_new_states(state_as_list)\n\u001b[0;32m      7\u001b[0m     )\n\u001b[0;32m      8\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m      9\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mmin\u001b[39m(\n\u001b[0;32m     10\u001b[0m         (minimax_pruning(new_state, is_maximizing\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m), new_state)\n\u001b[0;32m     11\u001b[0m         \u001b[39mfor\u001b[39;00m new_state \u001b[39min\u001b[39;00m all_possible_new_states(state_as_list)\n\u001b[0;32m     12\u001b[0m     )\n",
+      "Cell \u001b[1;32mIn [44], line 9\u001b[0m, in \u001b[0;36mminimax_pruning\u001b[1;34m(state_as_list, is_maximizing, alpha, beta)\u001b[0m\n\u001b[0;32m      6\u001b[0m scores \u001b[39m=\u001b[39m []\n\u001b[0;32m      7\u001b[0m \u001b[39mfor\u001b[39;00m new_state \u001b[39min\u001b[39;00m all_possible_new_states(state_as_list):\n\u001b[0;32m      8\u001b[0m     scores\u001b[39m.\u001b[39mappend(\n\u001b[1;32m----> 9\u001b[0m         score \u001b[39m:=\u001b[39m minimax_pruning(new_state, \u001b[39mnot\u001b[39;49;00m is_maximizing, alpha, beta)\n\u001b[0;32m     10\u001b[0m     )\n\u001b[0;32m     12\u001b[0m     \u001b[39mif\u001b[39;00m is_maximizing:\n\u001b[0;32m     13\u001b[0m         alpha \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(alpha, score)\n",
+      "Cell \u001b[1;32mIn [44], line 9\u001b[0m, in \u001b[0;36mminimax_pruning\u001b[1;34m(state_as_list, is_maximizing, alpha, beta)\u001b[0m\n\u001b[0;32m      6\u001b[0m scores \u001b[39m=\u001b[39m []\n\u001b[0;32m      7\u001b[0m \u001b[39mfor\u001b[39;00m new_state \u001b[39min\u001b[39;00m all_possible_new_states(state_as_list):\n\u001b[0;32m      8\u001b[0m     scores\u001b[39m.\u001b[39mappend(\n\u001b[1;32m----> 9\u001b[0m         score \u001b[39m:=\u001b[39m minimax_pruning(new_state, \u001b[39mnot\u001b[39;49;00m is_maximizing, alpha, beta)\n\u001b[0;32m     10\u001b[0m     )\n\u001b[0;32m     12\u001b[0m     \u001b[39mif\u001b[39;00m is_maximizing:\n\u001b[0;32m     13\u001b[0m         alpha \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(alpha, score)\n",
+      "    \u001b[1;31m[... skipping similar frames: minimax_pruning at line 9 (7 times)]\u001b[0m\n",
+      "Cell \u001b[1;32mIn [44], line 9\u001b[0m, in \u001b[0;36mminimax_pruning\u001b[1;34m(state_as_list, is_maximizing, alpha, beta)\u001b[0m\n\u001b[0;32m      6\u001b[0m scores \u001b[39m=\u001b[39m []\n\u001b[0;32m      7\u001b[0m \u001b[39mfor\u001b[39;00m new_state \u001b[39min\u001b[39;00m all_possible_new_states(state_as_list):\n\u001b[0;32m      8\u001b[0m     scores\u001b[39m.\u001b[39mappend(\n\u001b[1;32m----> 9\u001b[0m         score \u001b[39m:=\u001b[39m minimax_pruning(new_state, \u001b[39mnot\u001b[39;49;00m is_maximizing, alpha, beta)\n\u001b[0;32m     10\u001b[0m     )\n\u001b[0;32m     12\u001b[0m     \u001b[39mif\u001b[39;00m is_maximizing:\n\u001b[0;32m     13\u001b[0m         alpha \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(alpha, score)\n",
+      "Cell \u001b[1;32mIn [44], line 7\u001b[0m, in \u001b[0;36mminimax_pruning\u001b[1;34m(state_as_list, is_maximizing, alpha, beta)\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[39mreturn\u001b[39;00m score\n\u001b[0;32m      6\u001b[0m scores \u001b[39m=\u001b[39m []\n\u001b[1;32m----> 7\u001b[0m \u001b[39mfor\u001b[39;00m new_state \u001b[39min\u001b[39;00m all_possible_new_states(state_as_list):\n\u001b[0;32m      8\u001b[0m     scores\u001b[39m.\u001b[39mappend(\n\u001b[0;32m      9\u001b[0m         score \u001b[39m:=\u001b[39m minimax_pruning(new_state, \u001b[39mnot\u001b[39;00m is_maximizing, alpha, beta)\n\u001b[0;32m     10\u001b[0m     )\n\u001b[0;32m     12\u001b[0m     \u001b[39mif\u001b[39;00m is_maximizing:\n",
+      "Cell \u001b[1;32mIn [38], line 7\u001b[0m, in \u001b[0;36mall_possible_new_states\u001b[1;34m(init_state)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(init_state)): \u001b[39m# for every row\u001b[39;00m\n\u001b[0;32m      6\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(init_state[row]): \u001b[39m# for the number of elem in row\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m         new_state \u001b[39m=\u001b[39m deepcopy(init_state)\n\u001b[0;32m      9\u001b[0m         new_state[row] \u001b[39m=\u001b[39m new_state[row] \u001b[39m-\u001b[39m i \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m \u001b[39m#take away i+1 number of elem\u001b[39;00m\n\u001b[0;32m     10\u001b[0m         \u001b[39m#print(\"new state: \", new_state)\u001b[39;00m\n",
+      "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_3.9.3568.0_x64__qbz5n2kfra8p0\\lib\\copy.py:146\u001b[0m, in \u001b[0;36mdeepcopy\u001b[1;34m(x, memo, _nil)\u001b[0m\n\u001b[0;32m    144\u001b[0m copier \u001b[39m=\u001b[39m _deepcopy_dispatch\u001b[39m.\u001b[39mget(\u001b[39mcls\u001b[39m)\n\u001b[0;32m    145\u001b[0m \u001b[39mif\u001b[39;00m copier \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 146\u001b[0m     y \u001b[39m=\u001b[39m copier(x, memo)\n\u001b[0;32m    147\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    148\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39missubclass\u001b[39m(\u001b[39mcls\u001b[39m, \u001b[39mtype\u001b[39m):\n",
+      "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_3.9.3568.0_x64__qbz5n2kfra8p0\\lib\\copy.py:202\u001b[0m, in \u001b[0;36m_deepcopy_list\u001b[1;34m(x, memo, deepcopy)\u001b[0m\n\u001b[0;32m    200\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_deepcopy_list\u001b[39m(x, memo, deepcopy\u001b[39m=\u001b[39mdeepcopy):\n\u001b[0;32m    201\u001b[0m     y \u001b[39m=\u001b[39m []\n\u001b[1;32m--> 202\u001b[0m     memo[\u001b[39mid\u001b[39;49m(x)] \u001b[39m=\u001b[39m y\n\u001b[0;32m    203\u001b[0m     append \u001b[39m=\u001b[39m y\u001b[39m.\u001b[39mappend\n\u001b[0;32m    204\u001b[0m     \u001b[39mfor\u001b[39;00m a \u001b[39min\u001b[39;00m x:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "def play_nim(agent1: Callable, opponent: Callable):\n",
+    "    nim = Nim(4)\n",
+    "    logging.debug(f\"status: Initial board  -> {nim}\")\n",
+    "    \n",
+    "    strategy = (agent1, opponent)\n",
+    "    player = 0\n",
+    "\n",
+    "    while nim:\n",
+    "        ply = strategy[player](nim)\n",
+    "        nim.nimming(ply)\n",
+    "        logging.debug(f\"status: After player {player} -> {nim}\")\n",
+    "        player = 1 - player\n",
+    "    winner = 1 - player\n",
+    "    logging.info(f\"status: Player {winner} won!\")\n",
+    "\n",
+    "play_nim(min_max_agent, min_max_agent)"
    ]
   }
  ],
